Update instructions and add new content in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <span class="bg-blue-600 text-white text-sm font-bold px-3 py-1 rounded-full mr-3">1단계</span>
                         <h4 class="text-xl font-bold">링크 클릭하기</h4>
                     </div>
-                    <p class="text-gray-700 ml-1">공유받으신 링크(URL)를 클릭해주세요.<br><span class="text-sm text-gray-500">(카카오톡이나 문자로 받으신 파란색 영어 주소)</span></p>
+                    <p class="text-gray-700 ml-1">공유받으신 링크(URL)를 클릭해주세요.<br>연결된 <strong>build-yourapp</strong> 페이지에서 바로 앱을 사용하실 수 있습니다.<br><span class="text-sm text-gray-500">(카카오톡이나 문자로 받으신 파란색 영어 주소)</span></p>
                 </div>
 
                 <!-- Step 2 -->
@@ -113,7 +113,10 @@
             <h3 class="text-2xl font-bold text-blue-800 mb-6 border-b pb-2 flex items-center">
                 <i class="fas fa-keyboard mr-3"></i> 3. 프로그램 사용하기
             </h3>
-            <p class="mb-6 text-gray-600">화면에 영어가 많아 복잡해 보이지만, <span class="text-blue-600 font-bold">딱 두 가지만 기억하세요!</span></p>
+            <p class="mb-6 text-gray-600">
+                화면의 <strong>Build</strong> 메뉴 또는 <strong>Your App</strong> 화면에서 공유받은 앱을 바로 실행할 수 있습니다.<br>
+                영어가 많아 복잡해 보이지만, <span class="text-blue-600 font-bold">딱 두 가지만 기억하세요!</span>
+            </p>
 
             <div class="grid md:grid-cols-2 gap-6">
                 <!-- Action 1 -->
